--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev":"run-p dev:*",
+    "dev": "run-p dev:*",
     "dev:convex": "convex dev",
     "dev:next": "next dev --turbopack",
     "build": "next build",
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.0.2",
     "convex": "^1.17.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
